--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="C:\Users\wissa\Desktop\fsf-projects\homework\homework-02\assets\css\style.css">
-    <link rel="stylesheet" href="C:\Users\wissa\Desktop\fsf-projects\homework\homework-02\assets\css\reset.css">
-</head>
-<body>
+
+    <body>
     <header>
         <div>
     <nav>
