--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="C:\Users\wissa\Desktop\fsf-projects\homework\homework-02\assets\css\style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
     <body>
     <header>
